fix edit zone overflow

--- a/css/design-editor.css
+++ b/css/design-editor.css
@@ -434,7 +434,7 @@ div#container-button::-webkit-scrollbar {
   }
 
   .edit-zone{
-	  width:100%;
+	  width: calc(100% - 40px);
 	  padding: 20px;
   }
 
